Closed
Bug 1615539
Opened 5 years ago
Closed 5 years ago
about:memory > Measure does not work
Categories
(Core :: Graphics: ImageLib, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla75
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox73 | --- | unaffected |
firefox74 | + | fixed |
firefox75 | + | fixed |
People
(Reporter: alice0775, Assigned: aosmond)
References
(Regression)
Details
(Keywords: nightly-community, regression, Whiteboard: [MemShrink:P1])
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Reproducible: always
Steps To Reproduce:
- Open about:memory
2.Click [Measure] button
Actual results:
No report appears.
![]() |
Reporter | |
Updated•5 years ago
|
Version: 75 Branch → 74 Branch
![]() |
Reporter | |
Comment 1•5 years ago
|
||
![]() |
Reporter | |
Comment 2•5 years ago
•
|
||
Browser Console indicates an error as follows when I click [Measure] button:
Error: Invalid memory report(s): bad explicit kind aboutMemory.js:110:11
assertInput chrome://global/content/aboutMemory.js:110
handleReport chrome://global/content/aboutMemory.js:1157
processCurrentMemoryReports chrome://global/content/aboutMemory.js:686
appendAboutMemoryMain chrome://global/content/aboutMemory.js:1406
updateAboutMemoryFromCurrentData chrome://global/content/aboutMemory.js:700
displayReports chrome://global/content/aboutMemory.js:642
Comment 3•5 years ago
|
||
Thanks Alice!
Andrew, it seems that your patch in bug 1612589 caused this regression in our upcoming 74 release, could you have a look please? Thanks!
Flags: needinfo?(aosmond)
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → aosmond
Status: NEW → ASSIGNED
Component: about:memory → ImageLib
Priority: -- → P1
Product: Toolkit → Core
Assignee | ||
Comment 4•5 years ago
|
||
Ah this is likely Windows only, due to the D2D surfaces.
Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(aosmond)
Assignee | ||
Comment 5•5 years ago
|
||
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/10d8c314b394
Fix explicit image memory reporting broken on Windows. r=jrmuizel
Updated•5 years ago
|
Whiteboard: [MemShrink:P1]
Assignee | ||
Comment 8•5 years ago
•
|
||
Yup. Just waiting for it to get into a build so I can verify it.
Flags: needinfo?(aosmond)
Comment 9•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Updated•5 years ago
|
tracking-firefox74:
--- → +
tracking-firefox75:
--- → +
Assignee | ||
Comment 10•5 years ago
|
||
Comment on attachment 9126707 [details]
Bug 1615539 - Fix explicit image memory reporting broken on Windows.
Beta/Release Uplift Approval Request
- User impact if declined: Won't be able to generate memory reports on Windows.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivial change, switches an enum type to be more acceptable.
- String changes made/needed:
Attachment #9126707 -
Flags: approval-mozilla-beta?
Comment 11•5 years ago
|
||
Comment on attachment 9126707 [details]
Bug 1615539 - Fix explicit image memory reporting broken on Windows.
74 regression, simple fix, uplift approved for the next beta, thanks.
Attachment #9126707 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 12•5 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•