Bug 1615539 - Fix explicit image memory reporting broken on Windows. r=jrmuizel a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D62899